terraform/aws/ap-northeast-2/pixell-infra/kubectl-manifests/infra/infra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ingress
  namespace: infra
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:760235743813:certificate/18d5258b-464a-4b9f-a34e-ddbb47bc9888" # ACM 인증서 ARN
    alb.ingress.kubernetes.io/actions.ssl-redirect: >
      {"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301" }}
spec:
  ingressClassName: alb
  rules:
    - host: infra.aipixell.com
      http:
        paths:
          - path: /mlflow
            pathType: Prefix
            backend:
              service:
                name: mlflow-service
                port:
                  number: 5000
